[package]
name = "portal-solutions-asm-x86-64-shim"
version = "0.1.0"
edition = "2024"
license.workspace = true
description.workspace = true

[dependencies]
portal-pc-asm-common.workspace = true
typeid.workspace = true
portal-solutions-asm-x86-64 = { path = "../asm-x86-64" }
portal-solutions-asm-aarch64 = { path = "../asm-aarch64" }
portal-solutions-asm-riscv64 = { path = "../asm-riscv64" }

[features]
default = []
